--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "core-js": "^3.6.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "mitt": "^3.0.0",
     "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
